// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler mounting compiled code arrays mounts array using initial state data 1`] = `
"
          <ul>
            <li>foo</li><li>bar</li>
          </ul>
        "
`;

exports[`compiler mounting compiled code arrays simple array update - no changes in legth of array 1`] = `
"
          <ul>
            <li>foo-updated</li><li>bar-updated</li>
          </ul>
        "
`;

exports[`compiler mounting compiled code mount function evaluates given expression - javascript expressions 1`] = `"<div sum=\\"7\\">5</div>"`;

exports[`compiler mounting compiled code mount function evaluates given expression - method expressions 1`] = `"<div upper=\\"MACIEJ GIBAS\\">MACIEJ</div>"`;

exports[`compiler mounting compiled code mount function evaluates given expression - multiple expressions 1`] = `"<div foo=\\"2 and 3\\">2 and 3</div>"`;

exports[`compiler mounting compiled code mount function evaluates given expression - multiple expressions with undefined properties 1`] = `"<div>  and </div>"`;

exports[`compiler mounting compiled code mount function evaluates given expression - nested property expression on undefined property 1`] = `"<div></div>"`;

exports[`compiler mounting compiled code mount function evaluates given expression - property expression on undefined property 1`] = `"<div></div>"`;

exports[`compiler mounting compiled code mount function evaluates given expression - simple expressions 1`] = `"<div foo=\\"2\\">Maciej Gibas</div>"`;

exports[`compiler mounting compiled code mount function recreates given template on a given node - empty 1`] = `""`;

exports[`compiler mounting compiled code mount function recreates given template on a given node - multiple nodes 1`] = `"<div></div><p></p>"`;

exports[`compiler mounting compiled code mount function recreates given template on a given node - nested 1`] = `"<div><p>hello</p></div>"`;

exports[`compiler mounting compiled code mount function recreates given template on a given node - simple 1`] = `"<div></div>"`;

exports[`compiler mounting compiled code mount function recreates given template on a given node - text nodes 1`] = `
" <div></div>some text and empty line
        
        <p></p>"
`;

exports[`compiler mounting compiled code mount function recreates given template on a given node - with attributes 1`] = `"<div foo=\\"5\\" bar=\\"some\\"></div>"`;

exports[`compiler mounting compiled code update state in dom on update call - javascript expressions 1`] = `"<div sum=\\"802\\">800</div>"`;

exports[`compiler mounting compiled code update state in dom on update call - method expressions 1`] = `"<div upper=\\"FOO BAR\\">FOO</div>"`;

exports[`compiler mounting compiled code update state in dom on update call - multiple expressions 1`] = `"<div foo=\\"300 and 500\\">300 and 500</div>"`;

exports[`compiler mounting compiled code update state in dom on update call - multiple expressions with undefined properties 1`] = `"<div foo=\\"\\">  and </div>"`;

exports[`compiler mounting compiled code update state in dom on update call - nested property expression on undefined property 1`] = `"<div foo=\\"\\"></div>"`;

exports[`compiler mounting compiled code update state in dom on update call - property expression on undefined property 1`] = `"<div foo=\\"\\"></div>"`;

exports[`compiler mounting compiled code update state in dom on update call - simple expressions 1`] = `"<div foo=\\"300\\">Foo Bar</div>"`;
